# AIonFPGA

./: .gitignore  LICENSE  Makefile  README.md
doc/fact-sheet/: .gitignore  Makefile  README.md  content.tex  fact-sheet.tex  fhnwfactsheet.cls
doc/fact-sheet/class/: fhnwfactsheet.dtx  fhnwfactsheet.ins
doc/poster/: README.md  p6_aionfpga_poster_canzani_mueller.pptx
doc/presentation/graphics/scripts/: statistics.py  throw_analysis.py  training_results.py  weighting_function.py
doc/project-plan/: Makefile  README.md  fhnwthesis.cls  project-plan.tex
doc/project-plan/appendix/: milestones_and_timetable.xlsx  timetable.xlsx
doc/project-plan/header/: custom_definitions.tex  header.tex
doc/project-plan/sections/: concept.tex  deliverables.tex  initial_situation.tex  milestones_and_timetable.tex  project_goal.tex  project_goals.tex  timetable.tex
doc/thesis/: Makefile  aionfpgareport.cls  fhnwreport.cls  thesis.tex
doc/thesis/appendix/: aionfpga.py
doc/thesis/chapters/: abstract.tex  appendix.tex  conclusion.tex  declaration_of_authenticity.tex  embedded_platform.tex  experiences.tex  hardware.tex  inference.tex  introduction.tex  theoretical_background.tex  training_of_the_cnn.tex  verification_and_benchmark.tex
doc/thesis/chapters/embedded_platform/: dpu.tex  host_prerequisites.tex  model_deployment.tex  operating_system.tex  operating_systems.tex  overview.tex  use_scripts.tex  xilinx_tools.tex
doc/thesis/chapters/embedded_platform/operating_systems/: comparison.tex  petalinux.tex  pynq.tex
doc/thesis/chapters/hardware/: camera.tex  case.tex  lighting.tex  mpsoc_development_board.tex  throwing_booth.tex
doc/thesis/chapters/inference/: app.tex  camera_library.tex  overview.tex  package.tex  user_interface.tex
doc/thesis/chapters/theoretical_background/: ai.tex  ann.tex  cnn.tex  ml.tex
doc/thesis/chapters/training_of_the_cnn/: architecture.tex  dataset.tex  training.tex
doc/thesis/chapters/verification_and_benchmark/: classification_performance.tex  throughput.tex  training.tex
doc/thesis/class/: fhnwreport.dtx  fhnwreport.ins
doc/thesis/graphics/augmentation_downsampling/originals/: 1575032863_742_3_nerf-dart_resized_zoom.xcf
doc/thesis/graphics/originals/: arch.tex  statistics.py  weighting_function.py
doc/thesis/header/: acronyms.tex  custom_definitions.tex  glossary.tex  header.tex  listings.tex
doc/thesis/literature/: bibliography.bib
misc/build_pf/: do_all.sh  source_and_make.sh
misc/comp_app/: CMakeLists.txt  comp_app.sh  comp_opencv.sh  extr_baumer.sh  set_up.sh  start_docker.sh
mpsoc/build-pynq/: .gitignore  Makefile  README.md
mpsoc/build-pynq/wifi/: interfaces  wifi.sh  wpa_supplicant.conf
mpsoc/cnn-model/: Makefile  README.md  dump_input_fn.py  input_fn.py
mpsoc/cnn-model/scripts/: comp_model.sh  dump_model.sh  quant_model.sh  set_env.sh  start_docker.sh
mpsoc/comp_model/: build_model.sh
mpsoc/comp_model/dockerscripts/: comp_model.sh
mpsoc/comp_model/scripts/: comp_model.sh
mpsoc/comp_model/scripts/conf/: arch.json
mpsoc/dpu/: Makefile  README.md
mpsoc/dpu/config/: dpu_conf.vh
mpsoc/os/: .gitignore  build_os.sh  get_repos.sh
mpsoc/os/config/: dpu_conf.vh  prj_config
mpsoc/pynq-setup/: Makefile  README.md  aionfpga.service  start_app.sh
mpsoc/pynq-setup/config/: dpu_conf.vh
mpsoc/quant_model/: quantize_model.sh
mpsoc/quant_model/scripts/: quant_model.sh
sw/inference/: build_app.sh
sw/inference/aionfpga/: .gitignore  aionfpga.py  ui.py
sw/inference/camera/: CMakeLists.txt  README.md  camera.cc  install.sh
sw/inference/camera-interface/: .gitignore  CMakeLists.txt  install.sh
sw/inference/dockerscripts/: Makefile  comp_app.sh
sw/inference/src/: main.cc
sw/inference/src/camera-interface/: main.cc
sw/training/: README.md  cnn.py  dataset_generator.py
sw/verification/: .gitignore  cnnv.py  inference_predictions.py
util/: flash.sh  sd_content.sh
util/dockerscripts/: get_package.sh
verification/: inference_predictions.py  inference_throughput.py
